<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".rep_audio_y_video">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="381dp"
        android:layout_height="376dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enemy" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="410dp"
        android:background="@android:drawable/ic_media_play"
        android:onClick="PLayPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="410dp"
        android:background="@android:drawable/ic_media_next"
        android:onClick="Stop"
        app:layout_constraintStart_toEndOf="@+id/btn_play"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_repetir"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="410dp"
        android:background="@android:drawable/ic_popup_sync"
        android:onClick="Repetir"
        app:layout_constraintStart_toEndOf="@+id/btn_stop"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_anterior"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="410dp"
        android:background="@android:drawable/ic_media_rew"
        android:onClick="Anterior"
        app:layout_constraintStart_toEndOf="@+id/btn_repetir"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="410dp"
        android:background="@android:drawable/ic_media_ff"
        android:onClick="Siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_anterior"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:onClick="video"
        android:text="@string/botonid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idatrasmusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="Atras10"
        android:text="@string/atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>